--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </header>
     <main>
         <div class="Head_Banner">
-            <img class="Banner" src="./src/Background Picture.svg"
+            <img class="Banner" src="./src/BackgroundPicture.svg"
                 alt="Vue avion d'un port, donnant sur une rivière. Une route y permet un accès terrestre.">
             <h1>À vos côtés depuis plus de 30 ans Asterial vous accompagne dans vos projets aéroportuaires.</h1>
-            <a class="Scroll-down" href="#CompanyL" title="En cliquant ici, vous serez redirigé vers la section du site La Société" aria-label="En cliquant ici, vous serez redirigé vers la section du site La Société"><img src="./src/Scroll down.svg" alt="Icone de flèche vers le bas blanche"></a>
+            <a class="Scroll-down" href="#CompanyL" title="En cliquant ici, vous serez redirigé vers la section du site La Société" aria-label="En cliquant ici, vous serez redirigé vers la section du site La Société"><img src="./src/Scrolldown.svg" alt="Icone de flèche vers le bas blanche"></a>
         </div>
         <article class="Company" id="CompanyL">
             <div class="left_part">
@@ -148,7 +148,7 @@
                     </div>
                     </div>
                     <div class="button_submit">
-                        <label for="checkbox">
+                        <label for="checkbox1">
                             <input type="checkbox" name="validation" id="validation">En soumettant ce formulaire,
                             j'autorise que les informations saisies soient utilisées pour permettre de me recontacter
                             ainsi que les conditions relatives à l'utilisation de mes données personnelles décrites dans
@@ -199,5 +199,4 @@
         <p class="last_p">© 2023 - Asterial x Yohann MOY - Tous droits réservés.</p>
     </footer>
 </body>
-
 </html>
