--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                     </div>
                     <div class="button_submit">
                         <label for="checkbox1">
-                            <input type="checkbox" name="validation" id="validation" required>En soumettant ce formulaire,
+                            <input type="checkbox" name="validation" id="checkbox1" required>En soumettant ce formulaire,
                             j'autorise que les informations saisies soient utilisées pour permettre de me recontacter
                             ainsi que les conditions relatives à l'utilisation de mes données personnelles décrites dans
-                            les <a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" title="En cliquant ici, vous serez reidirigez vers le site de la RGPD" aria-label="En cliquant ici, vous serez reidirigez vers le site de la RGPD" target="_blank">mentions légales</a>.
+                            les <a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" title="En cliquant ici, vous serez reidirigez vers le site de la CNIL" aria-label="En cliquant ici, vous serez reidirigez vers le site de la CNIL" target="_blank">mentions légales</a>.
                         </label>
                         <button type="submit">Envoyer</button>
                     </div>
@@ -169,11 +169,15 @@
                 <div class="footer_1_right_a">
                     <h3>Siège social :</h3>
                     <div class="footer_info">
-                        <img src="./src/locate_icon.svg" alt="icone utilisée pour montrer l'adresse du siège sociale">
-                        <p>26 Rue BlahBlahBlah 75017 Paris - France</p>
+                        <svg width="15" height="24" viewBox="0 0 15 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 4C3.13 4 0 7.13 0 11C0 16.25 7 24 7 24C7 24 14 16.25 14 11C14 7.13 10.87 4 7 4ZM7 13.5C6.33696 13.5 5.70107 13.2366 5.23223 12.7678C4.76339 12.2989 4.5 11.663 4.5 11C4.5 10.337 4.76339 9.70107 5.23223 9.23223C5.70107 8.76339 6.33696 8.5 7 8.5C7.66304 8.5 8.29893 8.76339 8.76777 9.23223C9.23661 9.70107 9.5 10.337 9.5 11C9.5 11.663 9.23661 12.2989 8.76777 12.7678C8.29893 13.2366 7.66304 13.5 7 13.5Z" fill="white"/>
+                            </svg>
+                            <p>26 Rue BlahBlahBlah 75017 Paris - France</p>
                     </div>
                     <div class="footer_info">
-                        <img src="./src/phone_icon.svg" alt="icone utilisée pour montrer le numéro de téléphone">
+                        <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M1.76757 0.978307C1.93161 0.814507 2.12858 0.687442 2.34543 0.60553C2.56228 0.523619 2.79406 0.488732 3.02541 0.503181C3.25677 0.517631 3.48241 0.581087 3.68738 0.689345C3.89236 0.797602 4.07199 0.948189 4.21437 1.13113L5.89713 3.2931C6.20556 3.68968 6.31431 4.20627 6.19244 4.69379L5.67964 6.74701C5.65313 6.85335 5.65456 6.96475 5.6838 7.07038C5.71304 7.176 5.76909 7.27228 5.84651 7.34985L8.14987 9.65339C8.22753 9.73098 8.32396 9.78713 8.42976 9.81637C8.53556 9.84562 8.64713 9.84696 8.7536 9.82027L10.8057 9.30744C11.0463 9.24728 11.2974 9.24261 11.54 9.29377C11.7827 9.34494 12.0105 9.4506 12.2063 9.60276L14.3681 11.2847C15.1453 11.8894 15.2165 13.0379 14.5209 13.7326L13.5516 14.7021C12.8579 15.3958 11.821 15.7005 10.8545 15.3602C8.38066 14.4897 6.13457 13.0734 4.28281 11.2163C2.42595 9.36464 1.00973 7.11871 0.139187 4.64504C-0.200177 3.67937 0.104501 2.64151 0.798229 1.94773L1.76757 0.978307Z" fill="white"/>
+                        </svg>
                         <a href="tel:+33612521473"> +33 (0)6 12 52 14 73</a>
                     </div>
                 </div>
@@ -189,8 +193,8 @@
                 <div class="footer_1_right_c">
                     <h3>Juridique :</h3>
                     <ul>
-                        <li><a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" title="En cliquant ici, vous serez reidirigez vers le site de la RGPD" aria-label="En cliquant ici, vous serez reidirigez vers le site de la RGPD" target="_blank">Mentions légales</a></li>
-                        <li><a href="#">C.G.U</a></li>
+                        <li><a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" title="En cliquant ici, vous serez reidirigez vers le site de la CNIL." aria-label="En cliquant ici, vous serez reidirigez vers le site de la CNIL." target="_blank">Mentions légales</a></li>
+                        <li><a href="#" title="En cliquant ici, vous serez reidirigez vers la section C.G.U." aria-label="En cliquant ici, vous serez reidirigez vers la section C.G.U." target="_blank">C.G.U</a></li>
                     </ul>
                 </div>
             </div>
