--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="card_body">
                         <p>Maîtrise d'oeuvre relative à la mise en conformité Catégorie I de l'aéroport.</p>
                         <div class="button_savoir">
-                            <a href="https://www.parisvillaroche.com/" aria-label="En cliquant ici, vous serez redirigé vers le site de l'aérodrome de Paris/Villaroche" title="https://www.parisvillaroche.com/" aria-label="En cliquant ici, vous serez redirigé vers le site de l'aérodrome de Paris/Villaroche" target="_blank">
+                            <a href="https://www.parisvillaroche.com/" aria-label="En cliquant ici, vous serez redirigé vers le site de l'aérodrome de Paris/Villaroche" title="https://www.parisvillaroche.com/" target="_blank">
                                 <p>En savoir</p><span class="plus">+</span>
                             </a>
                         </div>
