--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-    <header>
+    <header id="top">
         <nav>
-            <img src="./src/Logo.svg" alt="Logo de l'entreprise Asterial">
+            <a href="./index.html" title="En cliquant ici, vous serez redirigé vers la page d'acceuil" aria-label="En cliquant ici, vous serez redirigé vers la page d'acceuil">
+            <img src="./src/Logo.svg" alt="Logo de l'entreprise Asterial"></a>
             <ul>
                 <li><a href="#CompanyL" aria-label="En cliquant ici, vous serez redirigé vers la section du site La Société " title="En cliquant ici, vous serez redirigé vers la section du site La Société">La Société</a></li>
                 <li><a href="#ExpertiseL" aria-label="En cliquant ici, vous serez redirigé vers la section du site montrant notre expertise" title="En cliquant ici, vous serez redirigé vers la section du site montrant notre expertise">Notre Expertise</a></li>
